Use LinkedHashMap to ensure Map ordering in EksStack
Key ordering is not guaranteed in the Map.of return type. This resulted
in changes in key ordering between stack deploys, which slows the deploy
down considerably even though nothing material has changed.

We now use LinkedHashMap which has a stable iteration order.